--- a/package.json
+++ b/package.json
@@ -1,20 +1,23 @@
 {
   "name": "resolution-calculator",
-  "version": "1.0.0",
-  "description": "Calculates optimal screen sizes for tvs",
-  "main": "resolutions.js",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "vite",
+    "build": "vue-tsc -b && vite build",
+    "preview": "vite preview"
   },
-  "author": "Parker Shepherd",
-  "license": "ISC",
-  "dependencies": {
-    "asyncawait": "^1.0.1",
-    "colors": "^1.1.2",
-    "lodash": "^4.17.15",
-    "prompt": "^0.2.14"
-  },
-  "engines": {
-    "node": ">=5.1.0"
+  "devDependencies": {
+    "@tailwindcss/vite": "^4.1.8",
+    "@types/d3": "^7.4.3",
+    "@vitejs/plugin-vue": "^5.2.3",
+    "@vue/tsconfig": "^0.7.0",
+    "d3": "^7.9.0",
+    "tailwindcss": "^4.1.8",
+    "typescript": "~5.8.3",
+    "vite": "^6.3.5",
+    "vue": "^3.5.16",
+    "vue-tsc": "^2.2.8"
   }
 }
